# Anime_carousel

./: .gitignore  README.md  project_manager.md
Anime_Template_Project/: CMakeLists.txt  anime_homepage.cpp  anime_homepage.h  main.cpp  src.qrc
Anime_Template_Project/Accordion/: AccordionCard.cpp  AccordionCard.h  CMakeLists.txt  accordionwidget.cpp  accordionwidget.h  img.qrc  main.cpp
Anime_Template_Project/Adaptive_Carousel/: CMakeLists.txt  daen_no_kado.cpp  daen_no_kado.h  latticed_circle_button.cpp  latticed_circle_button.h  main.cpp
Anime_Template_Project/Blur_Text/: CMakeLists.txt  fuzzytextwidget.cpp  fuzzytextwidget.h  img.qrc  main.cpp
Anime_Template_Project/Carousel_card/: card_button.cpp  card_button.h  card_text.cpp  card_text.h  carousel_card.cpp  carousel_card.h  carrier_card.cpp  carrier_card.h
Anime_Template_Project/Eye_of_Cthulhu/: JellyfishWidget.cpp  JellyfishWidget.h
Anime_Template_Project/Flowing_Gradient_Font/: widget.cpp  widget.h
Anime_Template_Project/FractalWidget/: CMakeLists.txt  fractalwidget.cpp  fractalwidget.h  fractalworker.cpp  fractalworker.h  mainwindow.cpp  mainwindow.h
Anime_Template_Project/Generative_Lines/: widget.cpp  widget.h
Anime_Template_Project/Glitch_Text/: GlitchTextWidget.cpp  GlitchTextWidget.h
Anime_Template_Project/Honeycomb_Grid/: CMakeLists.txt  hexagonwidget.cpp  hexagonwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
Anime_Template_Project/Letter_Glitch/: CMakeLists.txt  GlitchEffectWidget.cpp  GlitchEffectWidget.h  main.cpp
Anime_Template_Project/Liquid/: image_processing.cpp  image_processing.h  liquid_button.cpp  liquid_button.h  widget.cpp  widget.h
Anime_Template_Project/Login_interface/: hollow_button.cpp  hollow_button.h  input_box.cpp  input_box.h  login_button.cpp  login_button.h  login_form.cpp  login_form.h  other_login_buttons.cpp  other_login_buttons.h  registration_form.cpp  registration_form.h  responsive_form.cpp  responsive_form.h  scroll_bar.cpp  scroll_bar.h  transparent_transition_interface.cpp  transparent_transition_interface.h
Anime_Template_Project/Magnet_Lines/: CMakeLists.txt  RotatableLinesWidget.cpp  RotatableLinesWidget.h  main.cpp
Anime_Template_Project/Mimic_Button/: CMakeLists.txt  depressed_button.cpp  depressed_button.h  img.qrc  main.cpp  widget.cpp  widget.h
Anime_Template_Project/OverlayWidget/: CMakeLists.txt  OverlayWidget.cpp  OverlayWidget.h  main.cpp  readme.md
Anime_Template_Project/OverlayWidget/claude/: chat_data_C++ 头文件方法实现 (3).md  chat_data_C++ 头文件方法实现.md  chat_data_OverlayWidget Class Refactoring.md  chat_data_Qt Screen Capture Widget with Drawing (1).md  chat_data_Qt Screen Capture Widget with Drawing (3).md  chat_data_Qt Screen Capture Widget with Drawing.md  chat_data_Qt绘图遮罩橡皮擦功能.md  chat_data_Widget Overlay Precision Alignment.md  chat_data_标注功能设计.md
Anime_Template_Project/Physical_Text/: DraggableElasticObject.cpp  draggableelasticobject.h  main.cpp
Anime_Template_Project/PixelTransition/: pixel_transition.cpp  pixel_transition.h  widget.cpp  widget.h
Anime_Template_Project/Point_Wave/: widget.cpp  widget.h
Anime_Template_Project/Pressure_Block/: squarepressurewidget.cpp  squarepressurewidget.h
Anime_Template_Project/SplitText/: CMakeLists.txt  Single_Text.cpp  Single_Text.h  SplitText.cpp  SplitText.h  main.cpp
Anime_Template_Project/Star_Sky_Connection/: MovingPointsWidget.cpp  MovingPointsWidget.h
Anime_Template_Project/TreeScene/: TreeScene.cpp  TreeScene.h
Anime_Template_Project/Wave/: waveswidget.cpp  waveswidget.h
Anime_Template_Project/Web_button/: CMakeLists.txt  WebButton.cpp  WebButton.h  main.cpp
Anime_Template_Project/Zipper_Slider/: pathwidget.cpp  pathwidget.h
Anime_Template_Project/button_class/: CMakeLists.txt  diffusion_button.cpp  diffusion_button.h  main.cpp  wave_button.cpp  wave_button.h
Anime_Template_Project/dial_class/: knob_page.cpp  knob_page.h  temperature_dial.cpp  temperature_dial.h
Anime_Template_Project/json/: Anime_care_attributes.json
Anime_Template_Project/utility_class/: timer_animation.cpp  timer_animation.h  timer_animationgroup.cpp  timer_animationgroup.h
